src/index.css
@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=M+PLUS+2:wght@100..900&display=swap");

@font-face {
  font-family: "Spartan";
  src: url("../fonts/Spartan-Thin.ttf") format("truetype");
  font-weight: 100;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Spartan";
  src: url("../fonts/Spartan-Regular.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Spartan";
  src: url("../fonts/Spartan-Medium.ttf") format("truetype");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Spartan";
  src: url("../fonts/Spartan-SemiBold.ttf") format("truetype");
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Spartan";
  src: url("../fonts/Spartan-Bold.ttf") format("truetype");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

body {
  font-family: "Space Grotesk";
  overflow-x: hidden;
}

button {
  font-family: "Space Grotesk";
}

button:hover {
  cursor: pointer;
}

.flex {
  display: flex;
}

.header {
  justify-content: space-between;
  align-items: center;
  padding: 1rem 1.5rem;
  position: sticky;
  top: 0;
  background: white;
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
}

.header ul {
  display: flex;
  font-family: "Space Grotesk";
}

.header li:not(:last-child) {
  margin-right: 1rem;
}

.header-logo {
  font-family: Helvetica;
  font-weight: 900;
  font-size: clamp(1.5rem, 5vw, 2rem);
}

.footer {
  background: #317e94;
  color: rgb(255, 255, 255);
}

.footer-wrapper {
  justify-content: space-between;
  margin-bottom: 5.125rem;
}

.footer-links ul {
  font-family: "Space Grotesk";
  font-weight: 300;
}

.footer-links li {
  margin-bottom: 1.5rem;
}

.footer-title {
  font-weight: 700;
  margin-bottom: 2rem;
}

.newsletter {
  flex-direction: column;
  font-family: "Space Grotesk";
}

.newsletter label {
  margin-bottom: 1.5rem;
}

.newsletter input {
  background: transparent;
  border: 1px solid white;
  color: white;
  padding: 0.9rem 1.5rem;
  min-width: 16rem;
}

.footer {
  padding: 2rem;
}

.review-stars {
  height: 2rem;
}

.footer-logo {
  display: flex;
  justify-content: center;
  width: 100%;
  padding-top: 5.125rem;
}

.hero {
  background-image: url("https://res.cloudinary.com/dqf8qs0jk/image/upload/v1767591919/HeroImage_lv33ij.png");
  padding: 5rem 2rem;
  color: white;
}

.hero p,
.hero h1,
.hero button {
  margin-bottom: 1.5rem;
}

.hero h1 {
  font-family: "M PLUS 2", sans-serif;
  font-weight: 900;
  font-size: clamp(4rem, 10vw, 7.5rem);
}

.hero p {
  font-size: clamp(1rem, 2.5vw, 1.25rem);
}

.hero button {
  font-weight: 600;
  font-size: clamp(1rem, 2.5vw, 1.25rem);
}

.hero button {
  border: 1px solid white;
  color: white;
  background: transparent;
  padding: 0.625rem 1.625rem;
}

.welcome-description {
  font-size: clamp(1.2rem, 4vw, 2rem);
  font-weight: 200;
  text-align: center;
  margin: 2rem auto;
  padding-inline: 1rem;
}

.new-releases h2 {
  font-size: clamp(1.5rem, 4vw, 2rem);
  margin-block: 3rem 2rem;
  text-align: center;
}

.release-card {
  height: 200px;
  width: 80%;
  background: rgba(49, 126, 148, 0.6);
  margin-inline: 2rem;
  border-radius: 32px;
  margin-block: 2rem;
}

.products {
  flex-direction: column;
  width: 80%;
  margin-inline: auto;
}

.products img {
  margin-bottom: 2rem;
  border-radius: 2rem;
  height: 17rem;
}

.brand-showcase {
  justify-content: center;
  align-items: center;
  max-width: 1255px;
  flex-direction: column-reverse;
  margin-bottom: 2rem;
}

.brand-showcase-image {
  border-radius: 36px;
  background-image: url("/src/assets/brandshowcase.jpg");
  height: 27rem;
  width: 80%;
  background-size: cover;
}

.brand-showcase-text {
  text-align: center;
  margin-block: 2rem;
}

.brand-showcase-text p {
  font-size: 1.2rem;
}

.brand-showcase h2 {
  font-size: clamp(1.8rem, 5vw, 2.5rem);
  margin-bottom: 2.5rem;
}

.testimonials h2 {
  font-size: 2rem;
  text-align: center;
}

.testimonials-card-wrapper {
  justify-content: center;
  margin-block: 3rem;
}

.testimonial-card {
  flex-direction: column;
  justify-content: space-between;
  padding: 1rem;
  width: 17.1875rem;
  height: 21.875rem;
  border: 0.5px solid black;
  box-shadow: 0 2px 2px black;
  border-radius: 2rem;
}

.flamengo {
  width: 100%;
  justify-content: center;
  align-items: center;
  margin-bottom: 2rem;
}

.review-stars {
  margin-bottom: 2rem;
}

.testimonial-title {
  font-size: 1.25rem;
  font-weight: bold;
  margin-bottom: 2rem;
}

.testimonial-desc {
  margin-bottom: 9 rem;
}

.testimonial-customer {
  align-items: center;
  justify-content: end;
}

@media (max-width: 800px) {
  .hide-for-mobile {
    display: none !important;
  }

  .mobile-flex {
    flex-direction: column;
  }

  .testimonials-card-wrapper {
    align-items: center;
  }

  .testimonial-card {
    margin-bottom: 2rem;
  }

  .brand-showcase-image {
    height: 18rem;
    margin-bottom: 2rem;
  }

  .flamengo {
    width: 96%;
    margin: 2rem auto;
  }
}

@media (min-width: 801px) {
  .hero {
    padding: 7rem 10rem;
  }

  .footer {
    padding: 5rem 7.8125rem 0 5rem;
  }

  .welcome-description {
    width: 70.5rem;
  }

  .release-card {
    height: 484px;
    width: 409px;
  }

  .products {
    flex-direction: row;
    gap: 5rem;
  }

  .products img {
    width: 20rem;
    height: 20rem;
    margin-bottom: 0;
  }

  .brand-showcase {
    flex-direction: row;
    margin: 10.4375rem auto;
  }

  .brand-showcase-image {
    height: 27rem;
    width: 37.8125rem;
  }

  .brand-showcase-text {
    width: 38.125rem;
    margin-left: 2.5rem;
    text-align: left;
  }

  .testimonial-card:not(:last-child) {
    margin-right: 1.5rem;
  }

  .testimonials h2 {
    font-size: 2rem;
    margin-top: 8rem;
    margin-inline: auto;
    width: 70.5rem;
  }

  .footer-links ul {
    margin-right: 5.3125rem;
  }

  .hide-for-desktop {
    display: none !important;
  }
}

/* Hamburger Menu Styles */
.hamburger {
  cursor: pointer;
  background: transparent;
  border: none;
  z-index: 1001;
  /* padding: 0.5rem; */
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  width: 2rem;
  height: 2rem;
}

.bar {
  display: block;
  width: 100%;
  height: 3px;
  background-color: black;
  border-radius: 2px;
  transition: all 0.3s ease-in-out;
}

.hamburger.open .bar:nth-child(1) {
  transform: translateY(9px) rotate(45deg);
}

.hamburger.open .bar:nth-child(2) {
  opacity: 0;
}

.hamburger.open .bar:nth-child(3) {
  transform: translateY(-11px) rotate(-45deg);
}

/* Mobile Menu Styles */
.mobile-menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: white;
  display: flex;
  justify-content: center;
  padding-top: 10rem;
  /* align-items: center; */
  z-index: 1000;
  transform: translateX(100%);
  transition: transform 0.3s ease-in-out;
}

.mobile-menu.open {
  transform: translateX(0);
}

.mobile-menu ul {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  font-size: 1.5rem;
  font-family: "Space Grotesk";
}

.mobile-menu li {
  cursor: pointer;
  font-weight: 500;
  transition: color 0.2s;
}

.mobile-menu li:hover {
  color: #317e94;
}

